--- a/system/system-programming/the-linux-programming-interface/Ch10.md
+++ b/system/system-programming/the-linux-programming-interface/Ch10.md
@@ -13,7 +13,10 @@
    pub type time_t = i64;
    ```
 
-3. `gettimeofday(2)` and `settimeofday(2)`
+   > Such time represented in an absolute seconds elapsed since EPOCH is called
+   > calendar time.
+
+3. use `gettimeofday(2)` and `settimeofday(2)` to get or set calendar time
 
    ```c
    #include <sys/time.h>
@@ -46,7 +49,7 @@
    >
    > [wikipedia](https://simple.wikipedia.org/wiki/Orders_of_magnitude_(time))
 
-4. `time(2)`
+4. use `time(2)` to fetch calendar time
    
    ```c
    #include <time.h>
@@ -84,3 +87,152 @@
    ```
 
    These syscalls will handle `timezone` and `DST` for us automatically.
+
+   ```c
+   #include <string.h>
+   #include <assert.h>
+   #include <stdio.h>
+   #include <time.h>
+   
+   int main(void)
+   {
+    time_t now = time(NULL);
+    char buf[100];
+    assert(ctime_r(&now, buf) != NULL);
+    // remove the tailing newline
+    long len = strlen(buf);
+    buf[len - 2] = '\0';
+    printf("%s\n", buf);
+    return 0;
+   }
+   ```
+   ```shell
+   $ gccs main.c && ./a.out
+   Thu Sep  1 07:24:26 202
+   ```
+
+6. use `gmtime(3)` and `localtime(3)` to convert `time_t` to broken-down time.
+
+   [What is broken-down time](https://www.gnu.org/software/libc/manual/html_node/Broken_002ddown-Time.html)
+
+   ```c
+   struct tm {
+       int tm_sec;    /* Seconds (0-60) can be 60 to account for the leap seconds */
+       int tm_min;    /* Minutes (0-59) */
+       int tm_hour;   /* Hours (0-23) */
+       int tm_mday;   /* Day of the month (1-31) */
+       int tm_mon;    /* Month (0-11) */
+       int tm_year;   /* Year - 1900 */
+       int tm_wday;   /* Day of the week (0-6, Sunday = 0) */
+       int tm_yday;   /* Day in the year (0-365, 1 Jan = 0) */
+       int tm_isdst;  /* Daylight saving time */
+   };
+   ``` 
+
+   When `_BSD_SOURCE` is defined, this struct also includes two additional fields,
+   This is a BSD extension, present in 4.3BSD-Reno.
+
+   ```
+   long tm_gmtoff;           /* Seconds east of UTC */
+   const char *tm_zone;      /* Timezone abbreviation */
+   ```
+
+   ```c
+   struct tm *gmtime(const time_t *timep);
+   struct tm *gmtime_r(const time_t *restrict timep, struct tm *restrict result);
+
+   struct tm *localtime(const time_t *timep);
+   struct tm *localtime_r(const time_t *restrict timep, struct tm *restrict result);
+   ```
+
+   Diff between `gmtime(3)` and `localtime(3)`:
+
+   * The gmtime() function converts the calendar time timep to broken-down time
+     representation, expressed in **Coordinated Universal Time (UTC)**.
+
+     > `gm` means `Greenwich Mean Time`
+     > 
+     > [Diff between `GMT` and `UTC`](https://stackoverflow.com/questions/48942916/what-is-the-difference-between-utc-and-gmt)
+     > 
+     > I didn't get it, but seems these two things have the same time.
+
+
+   * The  localtime()  function converts the calendar time timep to broken-down
+     time representation, expressed **relative to the user's specified timezone**.
+
+
+   ```c
+   #include <string.h>
+   #include <stdio.h>
+   #include <time.h>
+   
+   int main(void)
+   {
+           time_t now = time(NULL);
+           struct tm buf1;
+           struct tm buf2;
+   
+           gmtime_r(&now, &buf1);
+           localtime_r(&now, &buf2);
+   
+           printf("gmtime_r: day: %d hour: %d\n", buf1.tm_mday, buf1.tm_hour);
+           printf("localtime_r: day: %d hour: %d\n", buf2.tm_mday, buf2.tm_hour);
+           return 0;
+   }
+   ```
+   ```shell
+   $ date
+   Thu Sep  1 07:57:02 AM CST 2022
+   
+   $ gccs main.c && ./a.out
+   gmtime_r: day: 31 hour: 23
+   localtime_r: day: 1 hour: 7
+   ```
+
+7. use `mktime(3)` to convert *local* broken-down time to calendar time:
+
+   ```c
+   #include <time.h>
+
+   time_t mktime(struct tm *tm);
+   ```
+
+   This function ignores the `tm_wday` and `tm_yday` fields
+
+8. use `asctime(3)` to convert Broken-down time to printable form
+  
+   ```c
+   #include <time.h>
+
+   char *asctime(const struct tm *tm);
+   char *asctime_r(const struct tm *restrict tm, char *restrict buf);
+   ``` 
+   
+   ```c
+   #include <string.h>
+   #include <stdio.h>
+   #include <time.h>
+   
+   int main(void)
+   {
+           time_t now = time(NULL);
+           struct tm buf1;
+           struct tm buf2;
+   
+           gmtime_r(&now, &buf1);
+           localtime_r(&now, &buf2);
+   
+           printf("%s\n", asctime(&buf1));
+           printf("%s\n", asctime(&buf2));
+           printf("%s\n", ctime(&now));
+           return 0;
+   }
+   ```
+   ```shell
+   $ gccs main.c && ./a.out
+   Thu Sep  1 01:57:57 2022
+   
+   Thu Sep  1 09:57:57 2022
+   
+   Thu Sep  1 09:57:57 2022
+   ```
