--- a/system/system-programming/the-linux-programming-interface/Ch10.md
+++ b/system/system-programming/the-linux-programming-interface/Ch10.md
@@ -49,6 +49,9 @@
    >
    > [wikipedia](https://simple.wikipedia.org/wiki/Orders_of_magnitude_(time))
 
+   > And even though `timeval` has `microsec` precision, whether it is supported
+   > is hardware dependent.
+
 4. use `time(2)` to fetch calendar time
    
    ```c
@@ -96,14 +99,14 @@
    
    int main(void)
    {
-    time_t now = time(NULL);
-    char buf[100];
-    assert(ctime_r(&now, buf) != NULL);
-    // remove the tailing newline
-    long len = strlen(buf);
-    buf[len - 2] = '\0';
-    printf("%s\n", buf);
-    return 0;
+       time_t now = time(NULL);
+       char buf[100];
+       assert(ctime_r(&now, buf) != NULL);
+       // remove the tailing newline
+       long len = strlen(buf);
+       buf[len - 2] = '\0';
+       printf("%s\n", buf);
+       return 0;
    }
    ```
    ```shell
@@ -199,6 +202,9 @@
 
    This function ignores the `tm_wday` and `tm_yday` fields
 
+   > If you pass `struct tm` return by `gmtime(3)` to `mktime(3)`, `mktime(3)`
+   > will return an erroneous value.
+
 8. use `asctime(3)` to convert Broken-down time to printable form
   
    ```c
@@ -209,7 +215,6 @@
    ``` 
    
    ```c
-   #include <string.h>
    #include <stdio.h>
    #include <time.h>
    
@@ -236,3 +241,36 @@
    
    Thu Sep  1 09:57:57 2022
    ```
+
+9. use `strftime(3)` to convert `broken-down time` to printable form with
+   **more precision**
+
+   ```c
+   #include <time.h>
+
+   size_t strftime(char *restrict s, size_t max, 
+                   const char *restrict format, 
+		   const struct tm *restrict tm);
+   ```
+
+10. use `strptime(3)` to convert `printable form` to `broken-down time`
+
+    > reverse of `strftime(3)`
+
+    ```c
+    #define _XOPEN_SOURCE       /* See feature_test_macros(7) */
+    #include <time.h>
+
+    char *strptime(const char *restrict s, 
+                   const char *restrict format,
+		   struct tm *restrict tm);
+    ```
+
+    The glibc implementation of `strptime(3)` will not modify those fields of the
+    `tm` structure that are not initialized by specifiers in `format`. This is not
+    portable, so we should ensure that all the fields of `tm` are initialzed validly
+    in portable programs.
+
+    `tm_isdst` field is not set.
+
+11. use `setlocale(3)` to get or set locale setting
