--- a/system/system-programming/the-linux-programming-interface/Ch10.md
+++ b/system/system-programming/the-linux-programming-interface/Ch10.md
@@ -250,7 +250,7 @@
 
    size_t strftime(char *restrict s, size_t max, 
                    const char *restrict format, 
-		   const struct tm *restrict tm);
+                   const struct tm *restrict tm);
    ```
 
 10. use `strptime(3)` to convert `printable form` to `broken-down time`
@@ -263,7 +263,7 @@
 
     char *strptime(const char *restrict s, 
                    const char *restrict format,
-		   struct tm *restrict tm);
+                   struct tm *restrict tm);
     ```
 
     The glibc implementation of `strptime(3)` will not modify those fields of the
@@ -274,3 +274,236 @@
     `tm_isdst` field is not set.
 
 11. use `setlocale(3)` to get or set locale setting
+
+12. Timezone
+
+    Timezone info can be volatile so that rather than hanling it directly in program, 
+    the system maintains this information in files in standard formats.
+
+    And the files reside under `/usr/share/zoneinfo`, each file in this directory
+    contains information about the timezone reginme in a particular country or
+    region.
+
+    > `/usr/share/zoneinfo` can be changed to another directory via `$TZDIR`, this
+    > is a GNU extension.
+
+    ```
+    ❯ l /usr/share/zoneinfo|head -5
+    Permissions Size User Group Date Modified Name
+    drwxr-xr-x@    - root root  29 Aug 07:42  Africa
+    drwxr-xr-x@    - root root  29 Aug 07:42  America
+    drwxr-xr-x@    - root root  29 Aug 07:42  Antarctica
+    drwxr-xr-x@    - root root  29 Aug 07:42  Arctic
+    ```
+
+    The format of above file can be found at `man 5 tcfile`, and these files are
+    built using `zic(8)`, the timezone compiler. `zdump(8)` command can be used
+    to display the current time corresponding to a specific timezone file:
+
+    ```shell
+    $ zdump Cuba
+    Cuba  Sat Sep  3 23:01:09 2022 CDT
+    ```
+
+    Local timezone is stored in file `/etc/localtime`, which is a softlink to
+    the timezone file under `/usr/share/zoninfo`:
+
+    ```shell
+    $ l /etc/localtime
+    Permissions Size User Group Date Modified Name
+    lrwxrwxrwx@   35 root root  25 Aug 06:05  /etc/localtime -> ../usr/share/zoneinfo/Asia/Shanghai
+    ```
+
+13. obtain timezone info in a program
+
+    ```c
+    #include <time.h>
+
+    void tcset(void)
+    ``` 
+
+    This function will set 3 global variables:
+
+    ```c
+    extern char *tzname[2];
+    extern long timezone;
+    extern int daylight;
+    ```
+
+    The mechanism behind this function: it first query `$TZ` environment variable,
+    if this is not set, then it uses `/etc/timezone`.
+
+    If `$TZ` is empty (set but empty) or it's format is not valid, then `UTC` will
+    be used.
+
+    Those time-related functions (e.g. ctime(), localtime()) will call `tzset`
+    automatically.
+
+14. change timezone for program - change $TZ
+
+    > Normally, you don't need to modify this variable unless you are operating
+    > a remove machine whose timezone differs from your localhost.
+
+    ```shell
+    $ date
+    Sun Sep  4 11:28:00 AM CST 2022
+    $ TZ=":Cuba" date
+    Sat Sep  3 11:28:13 PM CDT 2022
+    ``` 
+
+    These are two ways to change `$TZ` in SUSv3, first is demonstrated above, a colon 
+    following the relative path (from /usr/share/zoneinfo) of the target timezone file.
+
+    The second way is rather cumbersome. You can refer to 
+    [this](https://www.gnu.org/software/libc/manual/html_node/TZ-Variable.html)
+
+15. locale: conventions on how to express things
+
+    > For example, in US, date is expressed as `MM/DD/YY`. While in China, we
+    > use `YY/MM/DD`.
+
+    Ideally, all programs should respect this.
+
+    As same as timezone, locale settings is volatile, which should be maintained
+    by the OS. And it is.
+
+    The setting files reside under `/usr/share/locale` or `/usr/lib/locale` (distro
+    dependent)
+
+    ```shell
+    $ l /usr/share/locale | head -5
+    Permissions Size User Group Date Modified Name
+    drwxr-xr-x@    - root root   9 Aug 21:57  aa
+    drwxr-xr-x@    - root root   9 Aug 21:57  ab
+    drwxr-xr-x@    - root root   9 Aug 21:57  ace
+    drwxr-xr-x@    - root root   9 Aug 21:57  ach
+    ```
+
+    Each directory under `/usr/share/locale` is named in such convention:
+
+    ```
+    language[_territory[.codeset]][@modifier]
+    ```
+
+    * language: a two-letter ISO language code
+    * territory: two-letter ISO country code
+    * codeset: character-encoding set
+    * modifier: used to distinguish multiple locales whose `language/territory/
+      codeset` are all same
+
+    ```shell
+    drwxr-xr-x@    - root root  25 Aug 14:27  zh_CN
+    drwxr-xr-x@    - root root   9 Aug 21:57  zh_CN.GB2312
+    drwxr-xr-x@    - root root  25 Aug 14:54  zh_CN.UTF-8
+    drwxr-xr-x@    - root root   5 May 05:27  zh_Hans
+    drwxr-xr-x@    - root root   5 May 05:27  zh_Hant
+    drwxr-xr-x@    - root root   9 Aug 21:57  zh_HK
+    drwxr-xr-x@    - root root   9 Aug 21:57  zh_TW
+    drwxr-xr-x@    - root root   9 Aug 21:57  zh_TW.Big5
+    drwxr-xr-x@    - root root  25 Aug 14:54  zh_TW.UTF-8
+    ```
+
+16. list current lcoale settings
+    
+    ```shell
+    $ locale
+    LANG=en_US.UTF-8
+    LC_CTYPE="en_US.UTF-8"
+    LC_NUMERIC="en_US.UTF-8"
+    LC_TIME="en_US.UTF-8"
+    LC_COLLATE="en_US.UTF-8"
+    LC_MONETARY="en_US.UTF-8"
+    LC_MESSAGES="en_US.UTF-8"
+    LC_PAPER="en_US.UTF-8"
+    LC_NAME="en_US.UTF-8"
+    LC_ADDRESS="en_US.UTF-8"
+    LC_TELEPHONE="en_US.UTF-8"
+    LC_MEASUREMENT="en_US.UTF-8"
+    LC_IDENTIFICATION="en_US.UTF-8"
+    LC_ALL=
+    ```
+
+    `locale -a` can list all the locales supported by current system.
+
+17. set or get the locale of current process
+
+    ```c
+    #include <locale.h>
+
+    char *setlocale(int category, const char *locale);
+    ```
+
+    ```
+    Category            Governs
+    LC_ALL              All of the locale
+    LC_ADDRESS          Formatting of addresses and geography-related items (*)
+    LC_COLLATE          String collation
+    LC_CTYPE            Character classification
+    LC_IDENTIFICATION   Metadata describing the locale (*)
+    LC_MEASUREMENT      Settings related to measurements (metric versus US customary) (*)
+    LC_MESSAGES         Localizable natural-language messages
+    LC_MONETARY         Formatting of monetary values
+    LC_NAME             Formatting of salutations for persons (*)
+    LC_NUMERIC          Formatting of nonmonetary numeric values
+    LC_PAPER            Settings related to the standard paper size (*)
+    LC_TELEPHONE        Formats to be used with telephone services (*)
+    LC_TIME             Formatting of date and time values
+    ```
+    
+    If `locale` is a empty string, then the locale is set according to the values
+    of the current environment variables. The process will know nothing about
+    these environement variables unless we manually call `setlocale(category, "");`.
+
+    > If one of them is set, then the whole setting of locale is set to that value.
+
+    If `locale` is `NULL`, then the locale is just queried, not modified.
+ 
+    When we say specify or set a locale, we are talking about setting locale
+    to a subdir of `/usr/share/locale`. If the new locale value does not match
+    any item in `/usr/share/locale`, then the new locale will be stripped in
+    the following orders to get a match:
+
+    1. codeset
+    2. normalized codeset
+    3. territory
+    4. modifier
+
+    If no one matches after all these 4 strippings, `setlocale()` will report an
+    error.
+
+    We can test this:
+
+    ```c
+    #include <locale.h>
+    #include <stdio.h>
+    
+    int main(void)
+    {
+            char *old_locale = setlocale(LC_ALL, NULL);
+            printf("old_locale: \"%s\"\n", old_locale);
+    
+            char *new_locale = "wc_CN.utf-8";
+            char *res = setlocale(LC_ALL, new_locale);
+            if (res == NULL) {
+                    printf("\"%s\" is not a valid locale\n", new_locale);
+            }
+            return 0;
+    }
+    ```
+
+    ```shell
+    $ gccs main.c && ./a.out
+    old_locale: "C"
+    "wc_CN.utf-8" is not a valid locale
+    ```
+
+    `setlocale(LC_ALL, "C")` will be called at the startup of a program.
+
+18. priority of those locale-related environmen variables
+    
+    ```
+    LC_ALL > LC_* > LANG
+    ```
+
+    If a variable with higher priority is set, the the less priviledged
+    ones will be shadowed.
