--- a/system/system-programming/the-linux-programming-interface/Ch10.md
+++ b/system/system-programming/the-linux-programming-interface/Ch10.md
@@ -273,7 +273,10 @@
 
     `tm_isdst` field is not set.
 
-11. use `setlocale(3)` to get or set locale setting
+11. time-related syscalls and library functions
+
+    ![diagram](https://github.com/SteveLauC/pic/blob/main/Screenshot%20from%202022-09-04%2015-23-03.png)
+
 
 12. Timezone
 
