--- a/system/system-programming/the-linux-programming-interface/Ch10.md
+++ b/system/system-programming/the-linux-programming-interface/Ch10.md
@@ -291,7 +291,7 @@
     > is a GNU extension.
 
     ```
-    ❯ l /usr/share/zoneinfo|head -5
+    $ l /usr/share/zoneinfo|head -5
     Permissions Size User Group Date Modified Name
     drwxr-xr-x@    - root root  29 Aug 07:42  Africa
     drwxr-xr-x@    - root root  29 Aug 07:42  America
@@ -340,7 +340,7 @@
     be used.
 
     Those time-related functions (e.g. ctime(), localtime()) will call `tzset`
-    automatically.
+    automatically. **So you don't need to do this manually.**
 
 14. change timezone for program - change $TZ
 
@@ -428,6 +428,19 @@
 
     `locale -a` can list all the locales supported by current system.
 
+    `LANG` and `LC_ALL` both means `all`, if one of them is set to a value,
+    then all variables will have that value. But they have different priorities.
+
+    priority of those locale-related environmen variables
+    
+    ```
+    LC_ALL > LC_* > LANG
+    ```
+
+    If a variable with higher priority is set, the the less priviledged
+    ones will be shadowed. We use take `LANG` as the default setting,
+    if none of `LC_*` is set, then they all have the value of `LANG`.
+
 17. set or get the locale of current process
 
     ```c
@@ -453,11 +466,9 @@
     LC_TIME             Formatting of date and time values
     ```
     
-    If `locale` is a empty string, then the locale is set according to the values
+    If `locale` is a empty string (""), then the locale is set according to the values
     of the current environment variables. The process will know nothing about
-    these environement variables unless we manually call `setlocale(category, "");`.
-
-    > If one of them is set, then the whole setting of locale is set to that value.
+    these environement variables unless we manually do this.
 
     If `locale` is `NULL`, then the locale is just queried, not modified.
  
@@ -500,13 +511,174 @@
     "wc_CN.utf-8" is not a valid locale
     ```
 
-    `setlocale(LC_ALL, "C")` will be called at the startup of a program.
+    `setlocale(LC_ALL, "C")` will be called at the startup of a program as you 
+    can see from the above code snippet.
 
-18. priority of those locale-related environmen variables
+18. adjust the system clock
+
+    > Normally, one should not directly modify the system clock. Network Time
+    > Protocal daemon is responsible for this.
+
+    ```c
+    (2)
+    #include <sys/time.h>
+
+    int settimeofday(const struct timeval *tv, const struct timezone *tz);
+    ```
+
+    One can specify the new time value in `tv`, `tz` should be set to NULL as 
+    it is obsolete. And whether the microsecond field is supported is hardware-
+    dependent. (came from BSD)
+
+    ```c
+    (2) Linux-specific
+    #include <time.h>
+
+    int stime(const time_t *t);
+    ```
+
+    Set new time with the precison of only 1 second.
     
-    ```
-    LC_ALL > LC_* > LANG
+
+    ```c
+    (3)
+    #include <sys/time.h>
+
+    int adjtime(const struct timeval *delta, struct timeval *olddelta);
     ```
 
-    If a variable with higher priority is set, the the less priviledged
-    ones will be shadowed.
+    This is the preferred way. One can set the amount the time to be adjusted
+    in `delta`. After the call, if `delta` is positive, then a small amount of
+    time is added each second until `delta` is all added. If `delta` is negative,
+    a converse work will be done.
+
+    Since the `delta` is gradually added, these is possibility that only partial
+    time is adjusted at the time of the call. If so, The remaining time amount 
+    will be stored in `olddelta`.
+
+    ```c
+    struct timeval delta;
+    delta.tv_sec = 1000;
+    delte.tv_usec = 0;
+    adjtime(&delta, NULL);
+
+    // the remaining part of that 1000 secs will be stored in `olddelta`.
+    struct timeval olddelta;
+    adjtime(NULL, &olddelta);
+    ```
+
+    If one don't case about that remaining time, `olddelta` can be set to `NULL`.
+    If one just wanna query the remaining time instead of adjusting it, one can
+    use `adjtime(NULL, &buf)`.
+
+19. software clock (jiffy)
+    
+    > man 7 time
+
+    The accuracy of various time-out syscalls (select(2), sigtimedwait(2)) is 
+    limited to the resolution of software clock, which meansures time in 
+    `jiffies`, which is defined by the kernel constant `HZ`. And `HZ` is a 
+    configurable.
+
+
+20. process time: the CPU time consumed by a process since it is created
+
+    And process time can be divided into two categories:
+
+    1. *User* CPU time: time spent in user mode
+    2. *System* CPU time: time spent in kernel mode
+
+    ```shell
+    $ /usr/bin/time -p ./my_program
+    real 33.48 # longer than process time(`user` + `sys`)
+    user 218.16
+    sys 13.00
+    ```
+
+    Diff between real time and process time:
+
+    > The actual definiton of `real time` is just the duration since some fixed
+    > point. When that fixed point is set to `EPOCH`, we call this `real time`
+    > `calendar time`. If we say `real time` of a process, we are talking about
+    > its lifetime.
+
+    Linux is a time-sharing OS, which means each process is executed in the unit
+    called time slice. During a period of time, multiple processes will be executed.
+    So the real time is the duration between start and end (or lifetime) of that
+    process. While the process time is a small period in real time when this 
+    process owns the CPU.
+
+    For example, our time slice is 1 sec, and we have 5 seconds to exectute processes
+    A and B. Let's assume both processes are finished after 5 seconds and the
+    execution order is
+
+    ```
+    A - start of A
+    B - start of B
+    A
+    B - end of B
+    A - end of A
+    ```
+    The real time of A is 5 seconds and process time is 3 seconds.
+
+21. syscalls used to obtain process time
+
+    1. times(2)
+
+       ```c
+       #include <sys/times.h>
+   
+       clock_t times(struct tms *buf);
+       ```
+   
+       ```c
+       struct tms {
+           clock_t tms_utime;  /* user CPU time */
+           clock_t tms_stime;  /* system CPU time */
+           clock_t tms_cutime; /* user CPU time of all (waited for) children */
+           clock_t tms_cstime; /* system CPU time of all (waited for) children */
+       };
+       ```
+
+       This fcuntion stores the process time consumed so far in `buf`, and return
+       an elapsed time since an arbitrary point (the standard deliberately
+       does not specify what this point is).
+
+       If you wanna use the return value, since you don't know what that arbitrary
+       point is, you should call this twice and calculate the time difference
+       between them.
+
+       The `clock_t` type in this syscall is an integer type (i64 under Linux amd64)
+       in the unit called `clock ticks`. We can use `sysconf(_SC_CLK_TCK)` to 
+       obtain the number of `clock ticks` per second to convert the value to the
+       number of seconds.
+
+       And the return value of this function is **unreliable** as it can overflow
+       the range of `clock_t`. A reliable way is using `gettimeofday(2)`.
+
+       `buf` can be set to `NULL` under Linux, this is not permitted in other UNIX
+       implementations.
+  
+    2. clock(3)
+       
+       ```c
+       #include <time.h>
+
+       clock_t clock(void);
+       ```
+
+       > Even though both these functions use `clock_t`, but they are different!
+       >
+       > WTF!!!
+       >
+       > This is the result of historically conflicting definitions of `clock_t`.
+
+       This function returns the elapsed process time in units of `CLOCK_PER_SEC`.
+       If you wanna turn this value into the number of seconds, use 
+       `clock()/CLOCK_PER_SEC`.
+
+       > The accuracy of function is limited by `software clock`, see Note 19.
+
+       Under Linux, the return value of `clock(3)` does not include the time
+       consumed by child processes. While on some UNIX implementations, they
+       did this.
