--- a/system/system-programming/the-linux-programming-interface/Ch10.md
+++ b/system/system-programming/the-linux-programming-interface/Ch10.md
@@ -1,5 +1,15 @@
 #### Ch10: Time
 
+> 1. time formats: calendar time, broken-down time, printable format
+> 2. various syscalls and library functions used to convert between these time
+>    formats
+> 3. how is timezone expressed on Linux, some timezone-related commands and 
+>    a environment variable $TZ
+> 4. how is locale expressed on Linux, how to get or set locale settings
+> 5. 3 functions for setting system clock
+> 6. what is process time(user and system time), 2 syscalls used to obtain process
+>    time.
+
 1. The UNIX Epoch: January 1, 1970, is approximately the date (November 3, 1971)
    when the UNIX system came into being.
 
