--- a/system/system-programming/the-linux-programming-interface/Ch11.md
+++ b/system/system-programming/the-linux-programming-interface/Ch11.md
@@ -1,5 +1,11 @@
 #### Ch11: System Limits and Options
 
+> 1. the standard minimal limit
+> 2. implementation limit
+> 3. get the standard minimal limit at compile time
+> 4. get implementation limit at compile and run time
+> 5. get system options at compile and run time
+
 1. For each `limit`, SUSv3 **requires** that all implementations support a 
    minimum limit (minimum value of its `upper limit`). 
 
@@ -198,9 +204,9 @@
    long sysconf(int name);
    ```
 
-   return `-1` on both error and cases where `name` is not found. So one may need
-   to determine whether it is on error using the value of `errno`, to do this,
-   set `errno` to 0 before the call.
+   return `-1` on both error and cases where `name` can not be determined. So 
+   one may need to determine whether it is on error using the value of `errno`, 
+   to do this, set `errno` to 0 before the call.
 
    And thank God, we do have a rusty encapsulation for this in `nix`:
 
@@ -237,3 +243,66 @@
        }
    }
    ```
+
+   And the standard requires that the value retrieved from `sysconf` will be constant
+   in the lifetime of this process. But under Linux, there are some exceptions. For
+   some special limits, one can use `setrlimit(2)` to change it.
+
+9. obtain file-related limits at runtime using `pathconf(3)` and `fpathconf(3)`
+
+   ```c
+   #include <unistd.h>
+   
+   long fpathconf(int fd, int name);
+   long pathconf(const char *path, int name);
+   ```
+
+   Both return the corresponding limit value on success, and `-1` if limit is
+   indeterminate or an error occurred.
+
+   Unlike `sysconf(3)`, the standard doesn't require the return value remains
+   constant in the lifetime of the calling process since the relevant file-system
+   may be mounted or dismounted in that duration.
+
+10. when a limit is indeterminate, what should we do
+    
+    1. use the standard minimal limit `_POSIX_XX_MAX`
+    2. retry
+    3. estimate the limit using `sysconf` and `pathconf`
+       > How? These functions return -1 if `name` is indeterminate
+    4. use GNU [`autoconf`](https://www.gnu.org/software/autoconf/)
+
+11. system options
+    
+    The standard specifies various options a UNIX implementation may support.
+    Whether these options are supported can be retrieved at compile and run 
+    time.
+
+    query support at compile time, these are constants defined in `unistd.h`
+    to indicate whether an option is supported.
+    1. If the constant has value -1, then it's not supported.
+    2. has value 0, then we need to query it at runtime using `sysconf/pathconf`
+    3. has value greater than 0, is supported.
+
+    ```c
+    #include <unistd.h>
+    #include <stdio.h>
+    
+    int main(void)
+    {
+            if (_POSIX_JOB_CONTROL > 0) {
+                    printf("job control is supported\n");
+            } else if (_POSIX_JOB_CONTROL == 0) {
+                    long res = sysconf(_SC_JOB_CONTROL);
+                    if (res > 0) {
+                            printf("job control is supported\n");
+                    } else {
+                            printf("job control is not supported\n");
+                    }
+            } else {
+                    printf("job control is not supported\n");
+            }
+            return 0;
+    }
+    ```
+  
