--- a/system/system-programming/the-linux-programming-interface/Ch12.md
+++ b/system/system-programming/the-linux-programming-interface/Ch12.md
@@ -105,3 +105,70 @@
 6. `/proc` hierarchy
    
    ![diagram](https://github.com/SteveLauC/pic/blob/main/photo_2022-09-08_11-45-36.jpg)
+
+7. `uname(2)`
+   
+
+   ```c
+   #include <sys/utsname.h>
+
+   int uname(struct utsname *buf);
+   ```
+
+   ```c
+   struct utsname {
+       char sysname[];    /* Operating system name (e.g., "Linux") */
+       char nodename[];   /* Name within "some implementation-defined
+                             network" */
+       char release[];    /* Operating system release
+                             (e.g., "2.6.28") */
+       char version[];    /* Operating system version */
+       char machine[];    /* Hardware identifier */
+   #ifdef _GNU_SOURCE
+       char domainname[]; /* NIS or YP domain name */
+   #endif
+   };
+   ```
+
+   The standard (SUSv3) make the length of these fields undefined. On Linux, 
+   these fields are `65` (defined by constant `_UTSNAME_LENGTH`) bytes long 
+   (including the terminating NUL).
+
+   Some of these fields are also available through `/proc/sys/kernel`:
+   * sysname: /proc/sys/kernel/ostype
+   * release: /proc/sys/kernel/osrelease
+   * version: /proc/sys/kernel/version
+
+
+   ```c
+   #include <stdio.h>
+   #include <sys/utsname.h>
+   
+   int main(void)
+   {
+           struct utsname buf;
+           if (-1 == uname(&buf)){
+                   perror("uname(2)");
+           }
+   
+           printf("sysname: %s\n", buf.sysname);
+           printf("nodename (is hostname on Linux): %s\n", buf.nodename);
+           printf("release: %s\n", buf.release);
+           printf("version: %s\n", buf.version);
+           printf("machine: %s\n", buf.machine);
+           return 0;
+   }
+   ```
+
+   ```shell
+   $ gccs main.c && ./a.out
+   sysname: Linux
+   nodename (hostname): fedora
+   release: 5.19.7-200.fc36.x86_64
+   version: #1 SMP PREEMPT_DYNAMIC Mon Sep 5 14:50:12 UTC 2022
+   machine: x86_64
+   ```
+
+   > This syscall is the mechanism behind `uname(1)`
+
+   The `uts` in this syscall means `UNIX Time-Sharing System`
